# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_executable("av_codec_demo") {
  include_dirs = [
    "$av_codec_root_dir/test/nativedemo/avmuxer",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/services/services/factory",
    "$av_codec_root_dir/services/engine/plugin/core",
    "$av_codec_root_dir/services/engine/plugin/interface",
    "$av_codec_root_dir/services/engine/source/hst_releated",
    "$av_codec_root_dir/services/dfx/include",
    "$av_codec_root_dir/services/utils/include",
    "./av_codec_audio",
    "./audio_demo",
    "./include",
    "$av_codec_root_dir/test/nativedemo/video_demo",
    "$av_codec_root_dir/services/engine/codec/include/video",
    "$av_codec_root_dir/services/engine/common/include",
    "//foundation/graphic/graphic_2d/interfaces/inner_api",
    "//third_party/ffmpeg",
    "$av_codec_root_dir/test/nativedemo/codeclist_demo",
  ]

  cflags = [
    "-Wall",
    "-fno-rtti",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
    "-Wno-deprecated-declarations",
  ]

  cflags_cc = cflags
  cflags_cc += [ "-std=c++17" ]

  sources = [
    "$av_codec_root_dir/test/nativedemo/av_codec_demo.cpp",
    "$av_codec_root_dir/test/nativedemo/avmuxer/avmuxer_demo.cpp",
    "$av_codec_root_dir/test/nativedemo/avmuxer/avmuxer_demo_base.cpp",
    "$av_codec_root_dir/test/nativedemo/avmuxer/avmuxer_demo_common.c",
    "$av_codec_root_dir/test/nativedemo/avmuxer/avmuxer_engine_demo.cpp",
    "$av_codec_root_dir/test/nativedemo/avmuxer/avmuxer_ffmpeg_demo.cpp",
    "$av_codec_root_dir/test/nativedemo/avmuxer/native_avmuxer_demo.c",
    "./audio_demo/avcodec_audio_decoder_demo.cpp",
    "./audio_demo/avcodec_audio_encoder_demo.cpp",
    "./audio_demo/avcodec_audio_decoder_inner_demo.cpp",
    "$av_codec_root_dir/test/nativedemo/video_demo/videodec_ffmpeg_demo.cpp",
    "$av_codec_root_dir/test/nativedemo/codeclist_demo/codeclist_demo.cpp",
  ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:capi_packages",
    "$av_codec_root_dir/interfaces/kits/c:native_av_codec_avmuxer",
    "$av_codec_root_dir/services/engine/codec/video:av_codec_video_ffmpeg_codec",
    "$av_codec_root_dir/services/services:av_codec_service",
    "$av_codec_root_dir/services/utils:av_codec_format",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/ffmpeg:libohosffmpeg",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  install_enable = false

  part_name = "av_codec"
  subsystem_name = "multimedia"
}
