# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

AV_CODE_ROOT_DIR = "//foundation/multimedia/av_codec"
module_output_path = "av_codec"

av_codec_unittest_include_dirs = [
    "$AV_CODE_ROOT_DIR/interfaces/inner_api/native",
    "$AV_CODE_ROOT_DIR/interfaces/interfaces/inner_api/native",
]

av_codec_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

##################################################################################################################
ohos_unittest("av_muxer_unit_test") {
    module_out_path = module_output_path
    include_dirs = av_codec_unittest_include_dirs
    include_dirs += [
        "./",
    ]
    cflags = av_codec_unittest_cflags

    if (multimedia_av_codec_support_muxer) {
        sources = [
            "./avmuxer_test/avmuxer_unittest.cpp",
        ]
    }

    external_deps = [
    "multimedia_av_codec:av_codec_client",
  ]

    resource_config_file = "$AV_CODE_ROOT_DIR/test/unittest/ohos_test.xml"
}

##################################################################################################################
ohos_unittest("format_unit_test") {
    module_out_path = module_output_path
    include_dirs = av_codec_unittest_include_dirs
    include_dirs += [
        "./",
    ]
    cflags = av_codec_unittest_cflags

    if (multimedia_av_codec_support_muxer) {
        sources = [
            "./format_unit_test.cpp",
        ]
    }

    public_deps = [
        "$AV_CODE_ROOT_DIR/services/utils:av_codec_format",
    ]

    resource_config_file = "$AV_CODE_ROOT_DIR/test/unittest/ohos_test.xml"
}